--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 <div id="columns">
   <div id="side">
 
-  <a href="  http://localhost:3000">Home</a><br />
-  <a href="  http://localhost:3000/users/new">Create User</a><br />
-  <a href="  http://localhost:3000/login">Login</a><br />
+  <a href="  http://deep-planet-9958.heroku.com/">Home</a><br />
+  <a href="  http://deep-planet-9958.heroku.com/users/new">Create User</a><br />
+  <a href="  http://deep-planet-9958.heroku.com/login">Login</a><br />
   <% if session[:user_id] %>
   <br />
   <%  @admin_flag = 'No' %>
