--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
 <title>Online Vote and Post System</title>
+  <%= stylesheet_link_tag "scaffold" %>
+<%= stylesheet_link_tag "depot" , :media => "all" %>
+<%= javascript_include_tag :defaults %>
+<%= csrf_meta_tag %>
 
 </head>
 <body id="store">
